   displayed.  When you have a ton of other mods enabled, this should make it
   feel less like the mod is "hanging" after clicking the "Prepare Carefully"
   button.
 - Bug fixes for and improved compatibility with Alien Races mod:
   - Fixed duplicate add-ons
   - Fixed issues with head types and body types
   - Fixed issues with mixed up hair and skin colors

 _____________________________________________________________________________
 
   Version 1.0.11
 _____________________________________________________________________________

 - Fixed problem with temporary pawns in the Relationships tab.
 - Tweaks to the way that Prepare Carefully is injected into the game code.

 _____________________________________________________________________________
 
   Version 1.0.10
 _____________________________________________________________________________

 - Added support for 1.0.

 _____________________________________________________________________________
 
   Version 0.19.9
 _____________________________________________________________________________

 - Fixed a problem when randomizing backstories.
 - Added missing backstories back to the backstory dialogs.
 - Added a "matching faction only" backstory filter.
 - Fixed a problem where hair selections were being removed due to specific
   alien races.  Now all hairs are available for "humanlike" pawns.

 _____________________________________________________________________________
 
   Version 0.19.8
 _____________________________________________________________________________

 - Backstory options are limited to those for the selected pawn kind.
 - Fixed the info card for animals in the equipment tab view.

 _____________________________________________________________________________
 
   Version 0.19.7
 _____________________________________________________________________________

 - Fixed a problem where added faction pawns could not be used to create a
   custom relationship.